# msysgit

./: .gitattributes  .gitignore  .gitmodules  README.md  THIS_IS_MSYSGIT  TODO  TODO.md  Vagrantfile  fileList.txt  ghfw-release.sh  git-cmd.bat  msys.bat  wine-start.sh
.github/: ISSUE_TEMPLATE.md
build-1/: apr_rules.mk  libtool
cmd/: git.cmd  gitk.cmd  setup-ssh-agent.cmd  start-ssh-agent-persistent.cmd  start-ssh-agent.cmd
doc/msys/: MSYS-1.0.10-changes.rtf  MSYS_VS_CYGWIN  MSYS_WELCOME.rtf  README.rtf  msysDTK.rtf  msysDVLPR.rtf
etc/: .gitattributes  bash_profile  git-env-utility.js  gitattributes  gitattributes-suggested  gitconfig  gitignore  inputrc  motd  profile  ssh_known_hosts2  start-ssh-agent-persistent.js  vimrc
etc/ssh/: ssh_config  ssh_host_dsa_key  ssh_host_dsa_key.pub  ssh_host_ecdsa_key  (+8 more)
include/: _syslist.h  accctrl.h  aclapi.h  assert.h  basetsd.h  basetyps.h  bfd.h  bfdlink.h  cderr.h  cguid.h  commctrl.h  commdlg.h  cpl.h  cplext.h  ctype.h  custcntl.h  dbt.h  dde.h  ddeml.h  dirent.h  dlfcn.h  dlgs.h  exceptions.h  excpt.h  fcntl.h  features.h  getopt.h  glob.h  grp.h  icmp.h  ieeefp.h  imagehlp.h  imm.h  initguid.h  intshcut.h  io.h  ipexport.h  iphlpapi.h  ipifcons.h  iprtrmib.h  (+139 more)
lib/: apr.exp  aprutil.exp  charset.alias  libapr-0.la  libapr-1.la  libaprutil-0.la  libaprutil-1.la  libbfd.la  libexpat.la  libltdl.la  libneon.la  libopcodes.la  libserf-0.la  libstdc++.a.2.10.0  libsvn_client-1.la  libsvn_delta-1.la  libsvn_diff-1.la  libsvn_fs-1.la  libsvn_fs_fs-1.la  libsvn_fs_util-1.la  libsvn_ra-1.la  libsvn_ra_dav-1.la  libsvn_ra_local-1.la  libsvn_ra_neon-1.la  libsvn_ra_serf-1.la  libsvn_ra_svn-1.la  libsvn_repos-1.la  libsvn_subr-1.la  libsvn_swig_perl-1.la  libsvn_wc-1.la
mingw/: CHANGELOG-gcc-4.4.0-tdm-1.txt  README-gcc-tdm.txt  installed.ini
perl/: buildperl.sh  todo.txt
src/: cleanup.sh
src/rtf2html-0.2.0/: Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.in  rtf2html.cpp  rtf_keyword.h  rtf_table.cpp
ssl/: openssl.cnf
(+5834 files in other folders)
